// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render a manual legend 1`] = `
<div
  className="tf-legend tf-legend--level-1"
>
  <h4
    className="tf-legend__title"
  >
    foo
  </h4>
  <div
    className="tf-legend__list"
    style={null}
  >
    <h1
      id="hello-world"
    >
      Hello World
    </h1>
    

    <p>
      <div
        className="tf-legend__symbol"
      >
        <svg
          height={10}
          viewBox="0 0 10 10"
          width={10}
        >
          <rect
            fill="red"
            height={10}
            stroke="#444444"
            strokeWidth={1}
            width={10}
            x="0"
            y="0"
          />
        </svg>
      </div>
       foo
      <br />
      <div
        className="tf-legend__symbol"
      >
        <svg
          height={10}
          viewBox="0 0 10 10"
          width={10}
        >
          <rect
            fill="green"
            height={10}
            stroke="#444444"
            strokeWidth={1}
            width={10}
            x="0"
            y="0"
          />
        </svg>
      </div>
       bar  
    </p>
    

    <p>
      <div
        className="tf-legend__symbol"
      >
        <svg
          height={10}
          viewBox="0 0 12 12"
          width={10}
        >
          <circle
            cx={6}
            cy={6}
            fill="red"
            r={5}
            stroke="#111111"
            strokeWidth={1}
          />
        </svg>
      </div>
       foo
      <br />
      <div
        className="tf-legend__symbol"
      >
        <svg
          height={10}
          viewBox="0 0 12 12"
          width={10}
        >
          <circle
            cx={6}
            cy={6}
            fill="green"
            r={5}
            stroke="#111111"
            strokeWidth={1}
          />
        </svg>
      </div>
       bar  
    </p>
    

  </div>
</div>
`;

exports[`should render correctly circle 1`] = `
<div
  className="tf-legend tf-legend--level-1"
>
  <h4
    className="tf-legend__title"
  >
    Hello World
  </h4>
  <div
    className="tf-legend__list"
    style={null}
  >
    
    <div
      className="tf-legend__item tf-legend__item--circle tf-legend__item--left"
    >
      <div
        className="tf-legend__symbol-container"
        style={
          Object {
            "width": 16,
          }
        }
      >
        <div
          className="tf-legend__symbol"
        >
          <svg
            height={16}
            viewBox="0 0 18 18"
            width={16}
          >
            <circle
              cx={9}
              cy={9}
              fill="red"
              r={8}
              stroke="#111111"
              strokeWidth={1}
            />
          </svg>
        </div>
      </div>
      <div
        className="tf-legend__label"
      >
        Rouge
      </div>
    </div>
    <div
      className="tf-legend__item tf-legend__item--circle tf-legend__item--left"
    >
      <div
        className="tf-legend__symbol-container"
        style={
          Object {
            "width": 16,
          }
        }
      >
        <div
          className="tf-legend__symbol"
        >
          <svg
            height={16}
            viewBox="0 0 18 18"
            width={16}
          >
            <circle
              cx={9}
              cy={9}
              fill="green"
              r={8}
              stroke="#111111"
              strokeWidth={1}
            />
          </svg>
        </div>
      </div>
      <div
        className="tf-legend__label"
      >
        Vert
      </div>
    </div>
    <div
      className="tf-legend__item tf-legend__item--circle tf-legend__item--left"
    >
      <div
        className="tf-legend__symbol-container"
        style={
          Object {
            "width": 16,
          }
        }
      >
        <div
          className="tf-legend__symbol"
        >
          <svg
            height={16}
            viewBox="0 0 18 18"
            width={16}
          >
            <circle
              cx={9}
              cy={9}
              fill="blue"
              r={8}
              stroke="#111111"
              strokeWidth={1}
            />
          </svg>
        </div>
      </div>
      <div
        className="tf-legend__label"
      >
        Bleu
      </div>
    </div>
  </div>
</div>
`;

exports[`should render correctly square 1`] = `
<div
  className="tf-legend tf-legend--level-1"
>
  <h4
    className="tf-legend__title"
  >
    Hello World
  </h4>
  <div
    className="tf-legend__list"
    style={null}
  >
    
    <div
      className="tf-legend__item tf-legend__item--square tf-legend__item--left"
    >
      <div
        className="tf-legend__symbol-container"
        style={
          Object {
            "width": 32,
          }
        }
      >
        <div
          className="tf-legend__symbol"
        >
          <svg
            height={16}
            viewBox="0 0 16 16"
            width={16}
          >
            <rect
              fill="red"
              height={16}
              stroke="#444444"
              strokeWidth={1}
              width={16}
              x="0"
              y="0"
            />
          </svg>
        </div>
      </div>
      <div
        className="tf-legend__label"
      >
        Rouge
      </div>
    </div>
    <div
      className="tf-legend__item tf-legend__item--square tf-legend__item--left"
    >
      <div
        className="tf-legend__symbol-container"
        style={
          Object {
            "width": 32,
          }
        }
      >
        <div
          className="tf-legend__symbol"
        >
          <svg
            height={16}
            viewBox="0 0 16 16"
            width={16}
          >
            <rect
              fill="green"
              height={16}
              stroke="#444444"
              strokeWidth={1}
              width={16}
              x="0"
              y="0"
            />
          </svg>
        </div>
      </div>
      <div
        className="tf-legend__label"
      >
        Vert
      </div>
    </div>
    <div
      className="tf-legend__item tf-legend__item--square tf-legend__item--left"
    >
      <div
        className="tf-legend__symbol-container"
        style={
          Object {
            "width": 32,
          }
        }
      >
        <div
          className="tf-legend__symbol"
        >
          <svg
            height={16}
            viewBox="0 0 16 16"
            width={16}
          >
            <rect
              fill="blue"
              height={16}
              stroke="#444444"
              strokeWidth={1}
              width={16}
              x="0"
              y="0"
            />
          </svg>
        </div>
      </div>
      <div
        className="tf-legend__label"
      >
        Bleu
      </div>
    </div>
  </div>
</div>
`;

exports[`should render correctly stacked circles 1`] = `
<div
  className="tf-legend tf-legend--level-1"
>
  <h4
    className="tf-legend__title"
  >
    Hello World
  </h4>
  <div
    className="tf-legend__list tf-legend__stacked-circles"
    style={
      Object {
        "height": 16,
        "width": 27.2,
      }
    }
  >
    
    <div
      className="tf-legend__item tf-legend__item--circle tf-legend__item--left"
    >
      <div
        className="tf-legend__symbol-container"
        style={
          Object {
            "width": 16,
          }
        }
      >
        <div
          className="tf-legend__symbol"
        >
          <svg
            height={16}
            viewBox="0 0 18 18"
            width={16}
          >
            <circle
              cx={9}
              cy={9}
              fill="red"
              r={8}
              stroke="#111111"
              strokeWidth={1}
            />
          </svg>
        </div>
      </div>
      <div
        className="tf-legend__label"
      >
        Rouge
      </div>
    </div>
    <div
      className="tf-legend__item tf-legend__item--circle tf-legend__item--left"
    >
      <div
        className="tf-legend__symbol-container"
        style={
          Object {
            "width": 16,
          }
        }
      >
        <div
          className="tf-legend__symbol"
        >
          <svg
            height={16}
            viewBox="0 0 18 18"
            width={16}
          >
            <circle
              cx={9}
              cy={9}
              fill="green"
              r={8}
              stroke="#111111"
              strokeWidth={1}
            />
          </svg>
        </div>
      </div>
      <div
        className="tf-legend__label"
      >
        Vert
      </div>
    </div>
    <div
      className="tf-legend__item tf-legend__item--circle tf-legend__item--left"
    >
      <div
        className="tf-legend__symbol-container"
        style={
          Object {
            "width": 16,
          }
        }
      >
        <div
          className="tf-legend__symbol"
        >
          <svg
            height={16}
            viewBox="0 0 18 18"
            width={16}
          >
            <circle
              cx={9}
              cy={9}
              fill="blue"
              r={8}
              stroke="#111111"
              strokeWidth={1}
            />
          </svg>
        </div>
      </div>
      <div
        className="tf-legend__label"
      >
        Bleu
      </div>
    </div>
  </div>
</div>
`;

exports[`should render correctly with multi level 1`] = `
<div
  className="tf-legend tf-legend--level-1"
>
  <h4
    className="tf-legend__title"
  >
    level1
  </h4>
  <div
    className="tf-legend__list"
    style={null}
  >
    
    <div
      className="tf-legend__item tf-legend__item--square tf-legend__item--left"
    >
      <div
        className="tf-legend__symbol-container"
        style={
          Object {
            "width": 32,
          }
        }
      >
        <div
          className="tf-legend__symbol"
        >
          <svg
            height={16}
            viewBox="0 0 16 16"
            width={16}
          >
            <rect
              fill="red"
              height={16}
              stroke="#444444"
              strokeWidth={1}
              width={16}
              x="0"
              y="0"
            />
          </svg>
        </div>
      </div>
      <div
        className="tf-legend__label"
      >
        level1.1
      </div>
    </div>
    <div
      className="tf-legend__item tf-legend__item--square tf-legend__item--left"
    >
      <div
        className="tf-legend__symbol-container"
        style={
          Object {
            "width": 32,
          }
        }
      >
        <div
          className="tf-legend__symbol"
        >
          <svg
            height={16}
            viewBox="0 0 16 16"
            width={16}
          >
            <rect
              fill="blue"
              height={16}
              stroke="#444444"
              strokeWidth={1}
              width={16}
              x="0"
              y="0"
            />
          </svg>
        </div>
      </div>
      <div
        className="tf-legend__label"
      >
        level1.2
      </div>
    </div>
    <p>
      custom 
      <strong>
        nunjucks
      </strong>
       template
    </p>
    

    <div
      className="tf-legend tf-legend--level-2"
    >
      <h4
        className="tf-legend__title"
      >
        level2
      </h4>
      <div
        className="tf-legend__list"
        style={null}
      >
        
        <div
          className="tf-legend__item tf-legend__item--square tf-legend__item--left"
        >
          <div
            className="tf-legend__symbol-container"
            style={
              Object {
                "width": 32,
              }
            }
          >
            <div
              className="tf-legend__symbol"
            >
              <svg
                height={16}
                viewBox="0 0 16 16"
                width={16}
              >
                <rect
                  fill="red"
                  height={16}
                  stroke="#444444"
                  strokeWidth={1}
                  width={16}
                  x="0"
                  y="0"
                />
              </svg>
            </div>
          </div>
          <div
            className="tf-legend__label"
          >
            level2.1
          </div>
        </div>
        <div
          className="tf-legend__item tf-legend__item--square tf-legend__item--left"
        >
          <div
            className="tf-legend__symbol-container"
            style={
              Object {
                "width": 32,
              }
            }
          >
            <div
              className="tf-legend__symbol"
            >
              <svg
                height={16}
                viewBox="0 0 16 16"
                width={16}
              >
                <rect
                  fill="blue"
                  height={16}
                  stroke="#444444"
                  strokeWidth={1}
                  width={16}
                  x="0"
                  y="0"
                />
              </svg>
            </div>
          </div>
          <div
            className="tf-legend__label"
          >
            level2.2
          </div>
        </div>
        <div
          className="tf-legend tf-legend--level-3"
        >
          <h4
            className="tf-legend__title"
          >
            level3
          </h4>
          <div
            className="tf-legend__list"
            style={null}
          >
            
            <div
              className="tf-legend__item tf-legend__item--square tf-legend__item--left"
            >
              <div
                className="tf-legend__symbol-container"
                style={
                  Object {
                    "width": 32,
                  }
                }
              >
                <div
                  className="tf-legend__symbol"
                >
                  <svg
                    height={16}
                    viewBox="0 0 16 16"
                    width={16}
                  >
                    <rect
                      fill="red"
                      height={16}
                      stroke="#444444"
                      strokeWidth={1}
                      width={16}
                      x="0"
                      y="0"
                    />
                  </svg>
                </div>
              </div>
              <div
                className="tf-legend__label"
              >
                level3.1
              </div>
            </div>
            <div
              className="tf-legend__item tf-legend__item--square tf-legend__item--left"
            >
              <div
                className="tf-legend__symbol-container"
                style={
                  Object {
                    "width": 32,
                  }
                }
              >
                <div
                  className="tf-legend__symbol"
                >
                  <svg
                    height={16}
                    viewBox="0 0 16 16"
                    width={16}
                  >
                    <rect
                      fill="blue"
                      height={16}
                      stroke="#444444"
                      strokeWidth={1}
                      width={16}
                      x="0"
                      y="0"
                    />
                  </svg>
                </div>
              </div>
              <div
                className="tf-legend__label"
              >
                level3.2
              </div>
            </div>
            <div
              className="tf-legend tf-legend--level-4"
            >
              <h4
                className="tf-legend__title"
              >
                level4
              </h4>
              <div
                className="tf-legend__list"
                style={null}
              >
                
                <div
                  className="tf-legend__item tf-legend__item--square tf-legend__item--left"
                >
                  <div
                    className="tf-legend__symbol-container"
                    style={
                      Object {
                        "width": 32,
                      }
                    }
                  >
                    <div
                      className="tf-legend__symbol"
                    >
                      <svg
                        height={16}
                        viewBox="0 0 16 16"
                        width={16}
                      >
                        <rect
                          fill="red"
                          height={16}
                          stroke="#444444"
                          strokeWidth={1}
                          width={16}
                          x="0"
                          y="0"
                        />
                      </svg>
                    </div>
                  </div>
                  <div
                    className="tf-legend__label"
                  >
                    level4.1
                  </div>
                </div>
                <div
                  className="tf-legend__item tf-legend__item--square tf-legend__item--left"
                >
                  <div
                    className="tf-legend__symbol-container"
                    style={
                      Object {
                        "width": 32,
                      }
                    }
                  >
                    <div
                      className="tf-legend__symbol"
                    >
                      <svg
                        height={16}
                        viewBox="0 0 16 16"
                        width={16}
                      >
                        <rect
                          fill="blue"
                          height={16}
                          stroke="#444444"
                          strokeWidth={1}
                          width={16}
                          x="0"
                          y="0"
                        />
                      </svg>
                    </div>
                  </div>
                  <div
                    className="tf-legend__label"
                  >
                    level4.2
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`should render correctly with source 1`] = `
<div
  className="tf-legend tf-legend--level-1"
>
  <h4
    className="tf-legend__title"
  >
    les bains
  </h4>
  <div
    className="tf-legend__list"
    style={null}
  >
    
  </div>
  <div
    className="tf-legend__source"
  >
    Evian
  </div>
</div>
`;
